# hire-signal

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
agent/: agentic_workflow.py
config/: config.yaml
data/historical/anthropic/: 2026-03-14.json  2026-04-21.json
data/historical/cohere/: 2026-03-14.json
data/historical/google_deepmind/: 2026-03-14.json  2026-04-21.json
data/historical/hugging_face/: 2026-03-14.json
data/historical/meta_ai/: 2026-03-14.json
data/historical/mistral/: 2026-03-14.json
frontend/: app.py
output/: hiresignal_2026-03-14_13-34-29.md  hiresignal_2026-03-14_13-36-07.md  hiresignal_2026-03-14_14-11-18.md  hiresignal_2026-03-14_17-29-18.md  hiresignal_2026-03-14_17-29-30.md  hiresignal_2026-03-14_17-30-10.md  hiresignal_2026-03-14_17-30-51.md  hiresignal_2026-03-14_17-31-32.md  hiresignal_2026-03-14_17-33-01.md  hiresignal_2026-03-14_17-33-29.md  hiresignal_2026-03-14_17-34-30.md  hiresignal_2026-03-14_17-34-49.md  hiresignal_2026-03-14_17-36-36.md  hiresignal_2026-03-14_17-38-26.md  hiresignal_2026-03-14_17-40-17.md  hiresignal_2026-03-14_18-32-44.md  hiresignal_2026-04-21_00-34-58.md  hiresignal_2026-04-21_00-56-42.md
prompt_library/: prompts.py
scripts/: export_graph.py  start_backend.sh
tools/: company_news_tool.py  job_search_tool.py  skill_extractor_tool.py  trend_delta_tool.py
utils/: arxiv_fetcher.py  config_loader.py  data_store.py  job_fetcher.py  model_loader.py  news_fetcher.py  report_exporter.py  skill_taxonomy.py  trend_calculator.py
(+2 files in other folders)
